<resources>
    <string name="app_name">GridLayoutDemo</string>
    <string name="button1">DO YOU \n SPEAK ENGLISH?</string>
    <string name="button2">GOOD EVENING</string>
    <string name="button3">HELLO</string>
    <string name="button4">HOW ARE YOU?</string>
    <string name="button5">I LIVE IN...</string>
    <string name="button6">MY NAME IS...</string>
    <string name="button7">PLEASE</string>
    <string name="button8">WELCOME</string>
</resources>
